--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vip",
   "version": "1.0.0",
-  "description": "A Vue.js project",
+  "description": "潭州前端Vip",
   "author": "",
   "private": true,
   "scripts": {
