--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "dependencies": {
     "vue": "^2.2.6",
     "vue-router": "^2.3.1",
-    "axios": "latest",
-    "vuex": "latest",
-    "better-scroll": "latest"
+    "axios": "^0.16.1",
+    "vuex": "^2.3.1",
+    "better-scroll": "^0.1.15"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
